--- a/src/main/resources/templates/listado.html
+++ b/src/main/resources/templates/listado.html
@@ -3,12 +3,11 @@
 <nav>
     <ul>
         <li><a href="/alumnos">Volver</a></li>
-        <li><a href="/alumnos/insertar">Insertar Alumnos</a></li>
-        <li><a href="/alumnos/borrar">Borrar Alumnos</a></li>
-        <li><a href="/alumnos/insertarasignaturas">Insertar Asignaturas</a></li>
-        <li><a href="/alumnos/borrarasignaturas">Borrar Asignaturas</a></li>
-        <li><a href="/alumnos/insertarcalificaciones">Insertar Calificaciones</a></li>
-        <li><a href="/alumnos/borrarcalificaciones">Borrar Calificaciones</a></li>
+        <li><a href="/alumnos/insertar">Insertar Datoss</a></li>
+        <li><a href="/alumnos/borrar">Borrar Datos</a></li>
+        <li><a href="/alumnos">Listado Alumnos</a></li>
+        <li><a href="/alumnos/listadoasignaturas">Listado Asignaturas</a></li>
+        
     </ul>
 </nav>
 <h1>Listado Alumnos</h1>
